--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -9393,36 +9393,19 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/SettingFiles</string>
+	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
-	<key>NSTableView Columns KeyBingingTable</key>
-	<array>
-		<data>
-		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
-		hAErATCG
-		</data>
-		<string>198</string>
-		<data>
-		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
-		hAErATGG
-		</data>
-		<string>302</string>
-	</array>
-	<key>NSTableView Hidden Columns KeyBingingTable</key>
-	<array/>
-	<key>NSTableView Sort Ordering KeyBingingTable</key>
-	<array/>
 	<key>NSWindow Frame Preferences</key>
-	<string>204 261 924 485 0 0 1280 778 </string>
-	<key>NSWindow Frame SUStatusFrame</key>
-	<string>133 612 384 129 0 0 1280 778 </string>
+	<string>11 267 924 485 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>79 97 598 678 0 0 1280 778 </string>
+	<string>51 64 625 714 0 0 1280 778 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>152 64 625 714 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9437,146 +9420,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.11764705926179886</real>
+				<real>0.1098039299249649</real>
 				<key>Green Component</key>
-				<real>0.11372549086809158</real>
+				<real>0.1098039299249649</real>
 				<key>Red Component</key>
-				<real>0.10588235408067703</real>
+				<real>0.1098039299249649</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.52549022436141968</real>
 				<key>Green Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.52549022436141968</real>
 				<key>Red Component</key>
-				<real>0.97647058963775635</real>
+				<real>0.83921575546264648</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18039216101169586</real>
+				<real>0.52549022436141968</real>
 				<key>Green Component</key>
-				<real>0.88627451658248901</real>
+				<real>0.83921575546264648</real>
 				<key>Red Component</key>
-				<real>0.65098041296005249</real>
+				<real>0.68235296010971069</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45490196347236633</real>
+				<real>0.68627452850341797</real>
 				<key>Green Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.78823530673980713</real>
 				<key>Red Component</key>
-				<real>0.90196079015731812</real>
+				<real>0.89411765336990356</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78039216995239258</real>
+				<real>0.83921575546264648</real>
 				<key>Green Component</key>
-				<real>0.46274510025978088</real>
+				<real>0.68235296010971069</real>
 				<key>Red Component</key>
-				<real>0.12941177189350128</real>
+				<real>0.52549022436141968</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.83921575546264648</real>
 				<key>Green Component</key>
-				<real>0.5058823823928833</real>
-				<key>Red Component</key>
 				<real>0.68235296010971069</real>
+				<key>Red Component</key>
+				<real>0.83921575546264648</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93725490570068359</real>
+				<real>0.86666667461395264</real>
 				<key>Green Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.90588235855102539</real>
 				<key>Red Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.69411766529083252</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.93725490570068359</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.93725490570068359</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.93725490570068359</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18039216101169586</real>
+				<real>0.52549022436141968</real>
 				<key>Green Component</key>
-				<real>0.88627451658248901</real>
+				<real>0.83921575546264648</real>
 				<key>Red Component</key>
-				<real>0.65098041296005249</real>
+				<real>0.68235296010971069</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45490196347236633</real>
+				<real>0.52941179275512695</real>
 				<key>Green Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.68627452850341797</real>
 				<key>Red Component</key>
-				<real>0.90196079015731812</real>
+				<real>0.84313726425170898</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78231418132781982</real>
+				<real>0.83921575546264648</real>
 				<key>Green Component</key>
-				<real>0.46265947818756104</real>
+				<real>0.68235296010971069</real>
 				<key>Red Component</key>
-				<real>0.12754884362220764</real>
+				<real>0.52549022436141968</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.83921575546264648</real>
 				<key>Green Component</key>
-				<real>0.5058823823928833</real>
-				<key>Red Component</key>
 				<real>0.68235296010971069</real>
+				<key>Red Component</key>
+				<real>0.83921575546264648</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93725490570068359</real>
+				<real>0.70588237047195435</real>
 				<key>Green Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.85882353782653809</real>
 				<key>Red Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.54117649793624878</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94901961088180542</real>
+				<real>0.81568628549575806</real>
 				<key>Green Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.81568628549575806</real>
 				<key>Red Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.81568628549575806</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.11764705926179886</real>
+				<real>0.1098039299249649</real>
 				<key>Green Component</key>
-				<real>0.11372549086809158</real>
+				<real>0.1098039299249649</real>
 				<key>Red Component</key>
-				<real>0.10588235408067703</real>
+				<real>0.1098039299249649</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.52549022436141968</real>
 				<key>Green Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.52549022436141968</real>
 				<key>Red Component</key>
-				<real>0.97647058963775635</real>
+				<real>0.83921575546264648</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9585,11 +9568,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.14901961386203766</real>
 				<key>Green Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.14901961386203766</real>
 				<key>Red Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.14901961386203766</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9608,11 +9591,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93319034576416016</real>
+				<real>0.89919352531433105</real>
 				<key>Green Component</key>
-				<real>0.96691048145294189</real>
+				<real>0.89919352531433105</real>
 				<key>Red Component</key>
-				<real>0.96580147743225098</real>
+				<real>0.89919352531433105</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9625,20 +9608,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94117647409439087</real>
+				<real>0.6852307915687561</real>
 				<key>Green Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.78654336929321289</real>
 				<key>Red Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.89265114068984985</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.13333334028720856</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.13333334028720856</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.13333334028720856</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
@@ -9659,11 +9642,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94901961088180542</real>
+				<real>0.81568628549575806</real>
 				<key>Green Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.81568628549575806</real>
 				<key>Red Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.81568628549575806</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10019,20 +10002,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93319034576416016</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.96691048145294189</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.96580147743225098</real>
+				<real>1</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.26666668057441711</real>
+				<real>0.30241936445236206</real>
 				<key>Green Component</key>
-				<real>0.26666668057441711</real>
+				<real>0.30241936445236206</real>
 				<key>Red Component</key>
-				<real>0.26666668057441711</real>
+				<real>0.30241936445236206</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10956,7 +10939,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/a13596/Desktop/repository/SettingFiles</string>
+	<string>~/Desktop/repository/SettingFiles/</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -10974,7 +10957,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-04-17T01:25:55Z</date>
+	<date>2014-05-17T16:06:54Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -11029,6 +11012,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>1.0.0.20140112</string>
+	<string>1.0.0.20140421</string>
 </dict>
 </plist>
