--- a/.jshintrc
+++ b/.jshintrc
@@ -6,44 +6,59 @@
     "requirejs"
   ],
 
-  "indent": 2,
+  //http://www.jshint.com/docs/options/
+  //http://qiita.com/HieroglypH/items/3cb16ecff43b8e5f62e1#2-4
 
-  "bitwise": false,
-  "camelcase": false,
-  "curly": false,
-  "eqeqeq": true,
-  "forin": false,
-  "immed": true,
-  "latedef": false,
-  "newcap": false,
-  "noarg": true,
-  "noempty": true,
-  "nonew": false,
-  "plusplus": false,
-  "quotmark": false,
-  "regexp": false,
-  "undef": true,
-  "unused": true,
-  "strict": true,
-  "trailing": true,
-  "maxparams": false,
-  "maxdepth": false,
-  "maxstatements": false,
-  "maxcomplexity": false,
-  "maxlen": false,
+  /* Enforcing options*/
 
-  "boss": false,
-  "debug": false,
-  "eqnull": false,
-  "esnext": true,
-  "evil": true,
-  "expr": false,
-  "funcscope": false,
-  "globalstrict": false,
-  "lastsemic": false,
-  "laxbreak": false,
-  "laxcomma": true,
-  "loopfunc": false,
+  "indent":         2,        //enforces specific tab width for your code.
+
+  "bitwise":        false,    //prohibits the use of bitwise operators such as ^ (XOR), | (OR) and others.
+  "camelcase":      false,    //allows you to force all variable names to use either camelCase style or UPPER_CASE with underscores.
+  "curly":          false,    //requires you to always put curly braces around blocks in loops and conditionals.
+  "eqeqeq":         true,     //prohibits the use of == and != in favor of === and !==.
+  "forin":          false,    //requires all for in loops to filter object's items.
+//"freeze"                    //prohibits overwriting prototypes of native objects such as Array, Date and so on.
+  "immed":          true,     //prohibits the use of immediate function invocations without wrapping them in parentheses
+  "latedef":        false,    //prohibits the use of a variable before it was defined.
+  "newcap":         false,    //requires you to capitalize names of constructor functions.
+  "noarg":          true,     //prohibits the use of arguments.caller and arguments.callee.
+  "noempty":        true,     //warns when you have an empty block in your code.
+//"nonbsp"                    //warns about "non-breaking whitespace" characters.
+  "nonew":          false,    //prohibits the use of constructor functions for side-effects.
+  "plusplus":       false,    //prohibits the use of unary increment and decrement operators.
+  "quotmark":       false,    //enforces the consistency of quotation marks used throughout your code.
+  "regexp":         false,    //not found. // Prohibit `.` and `[^...]` in regular expressions.
+  "undef":          true,     //prohibits the use of explicitly undeclared variables.
+  "unused":         true,     //warns when you define and never use your variables.
+  "strict":         true,     //requires all functions to run in ECMAScript 5's strict mode.
+  "trailing":       true,     //makes it an error to leave a trailing whitespace in your code.
+  "maxparams":      false,    //lets you set the max number of formal parameters allowed per function
+  "maxdepth":       false,    //lets you control how nested do you want your blocks to be
+  "maxstatements":  false,    //lets you set the max number of statements allowed per function:
+  "maxcomplexity":  false,    //lets you control cyclomatic complexity throughout your code.
+  "maxlen":         false,    //lets you set the maximum length of a line.
+
+
+  /* Relaxing options */
+
+//"asi":                      //suppresses warnings about missing semicolons.
+  "boss":           false,    //suppresses warnings about the use of assignments in cases where comparisons are expected.
+  "debug":          false,    //suppresses warnings about the debugger statements in your code.
+  "eqnull":         false,    //suppresses warnings about == null comparisons.
+  "esnext":         true,     //tells JSHint that your code uses ECMAScript 6 specific syntax.
+  "evil":           true,     //suppresses warnings about the use of eval.
+  "expr":           false,    //suppresses warnings about the use of expressions where normally you would expect to see assignments or function calls.
+  "funcscope":      false,    //suppresses warnings about declaring variables inside of control structures while accessing them later from the outside.
+//"gcl"                       //makes JSHint compatible with Google Closure Compiler.
+  "globalstrict":   false,
+//"iterator":                 //suppresses warnings about the __iterator__ property.
+  "lastsemic":      false,    //suppresses warnings about missing semicolons.
+  "laxbreak":       false,    //suppresses most of the warnings about possibly unsafe line breakings in your code.
+  "laxcomma":       true,     //suppresses warnings about comma-first coding style:
+  "loopfunc":       false,    //suppresses warnings about functions inside of loops.
+//"maxerr":                   //allows you to set the maximum amount of warnings JSHint will produce before giving up.
+//"moz":                      //tells JSHint that your code uses Mozilla JavaScript extensions.
   "multistr":  false,
   "onecase": false,
   "proto": true,
@@ -64,5 +79,5 @@
   "onevar": false,
   "white": true,
 
-  "es3":true
+  "es3":            true      //E:tells JSHint that your code needs to adhere to ECMAScript 3 specification.
 }
