--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9393,19 +9393,40 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
+	<string>~/Desktop/repository/SettingFiles</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
+	<key>NSTableView Columns KeyBingingTable</key>
+	<array>
+		<data>
+		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
+		hAErATCG
+		</data>
+		<string>198</string>
+		<data>
+		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
+		hAErATGG
+		</data>
+		<string>302</string>
+	</array>
+	<key>NSTableView Hidden Columns KeyBingingTable</key>
+	<array/>
+	<key>NSTableView Sort Ordering KeyBingingTable</key>
+	<array/>
 	<key>NSWindow Frame Preferences</key>
-	<string>11 267 924 485 0 0 1280 778 </string>
+	<string>204 261 924 485 0 0 1280 778 </string>
+	<key>NSWindow Frame SUStatusFrame</key>
+	<string>133 612 384 129 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>51 64 625 714 0 0 1280 778 </string>
+	<string>1371 -9 610 748 1280 -280 1920 1058 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>152 64 625 714 0 0 1280 778 </string>
+	<string>485 66 610 706 0 0 1280 778 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>173 66 610 706 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9420,146 +9441,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.1098039299249649</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.1098039299249649</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.1098039299249649</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52549022436141968</real>
+				<real>0.25882354378700256</real>
 				<key>Green Component</key>
-				<real>0.52549022436141968</real>
+				<real>0.25882354378700256</real>
 				<key>Red Component</key>
-				<real>0.83921575546264648</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52549022436141968</real>
+				<real>0.40784314274787903</real>
 				<key>Green Component</key>
-				<real>0.83921575546264648</real>
+				<real>0.80392158031463623</real>
 				<key>Red Component</key>
-				<real>0.68235296010971069</real>
+				<real>0.45490196347236633</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.68627452850341797</real>
+				<real>0.16078431904315948</real>
 				<key>Green Component</key>
-				<real>0.78823530673980713</real>
+				<real>0.72549021244049072</real>
 				<key>Red Component</key>
-				<real>0.89411765336990356</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.83921575546264648</real>
+				<real>0.84313726425170898</real>
 				<key>Green Component</key>
-				<real>0.68235296010971069</real>
+				<real>0.84313726425170898</real>
 				<key>Red Component</key>
-				<real>0.52549022436141968</real>
+				<real>0.13725490868091583</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.83921575546264648</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.68235296010971069</real>
+				<real>0.21568627655506134</real>
 				<key>Red Component</key>
-				<real>0.83921575546264648</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.86666667461395264</real>
+				<real>0.88235294818878174</real>
 				<key>Green Component</key>
-				<real>0.90588235855102539</real>
+				<real>0.92941176891326904</real>
 				<key>Red Component</key>
-				<real>0.69411766529083252</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93725490570068359</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.93725490570068359</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.93725490570068359</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52549022436141968</real>
+				<real>0.40784314274787903</real>
 				<key>Green Component</key>
-				<real>0.83921575546264648</real>
+				<real>0.68627452850341797</real>
 				<key>Red Component</key>
-				<real>0.68235296010971069</real>
+				<real>0.45490196347236633</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52941179275512695</real>
+				<real>0.16078431904315948</real>
 				<key>Green Component</key>
-				<real>0.68627452850341797</real>
+				<real>0.67843139171600342</real>
 				<key>Red Component</key>
-				<real>0.84313726425170898</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.83921575546264648</real>
-				<key>Green Component</key>
-				<real>0.68235296010971069</real>
-				<key>Red Component</key>
 				<real>0.52549022436141968</real>
+				<key>Green Component</key>
+				<real>0.56078433990478516</real>
+				<key>Red Component</key>
+				<real>0.20000000298023224</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.83921575546264648</real>
+				<real>0.90092635154724121</real>
 				<key>Green Component</key>
-				<real>0.68235296010971069</real>
+				<real>0.077163636684417725</real>
 				<key>Red Component</key>
-				<real>0.83921575546264648</real>
+				<real>0.58085638284683228</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70588237047195435</real>
+				<real>0.84313726425170898</real>
 				<key>Green Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.84313726425170898</real>
 				<key>Red Component</key>
-				<real>0.54117649793624878</real>
+				<real>0.13725490868091583</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.81568628549575806</real>
+				<real>0.87843137979507446</real>
 				<key>Green Component</key>
-				<real>0.81568628549575806</real>
+				<real>0.88235294818878174</real>
 				<key>Red Component</key>
-				<real>0.81568628549575806</real>
+				<real>0.88235294818878174</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.1098039299249649</real>
+				<real>0.3333333432674408</real>
 				<key>Green Component</key>
-				<real>0.1098039299249649</real>
+				<real>0.3333333432674408</real>
 				<key>Red Component</key>
-				<real>0.1098039299249649</real>
+				<real>0.3333333432674408</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52549022436141968</real>
+				<real>0.25882354378700256</real>
 				<key>Green Component</key>
-				<real>0.52549022436141968</real>
+				<real>0.19607843458652496</real>
 				<key>Red Component</key>
-				<real>0.83921575546264648</real>
+				<real>1</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9568,11 +9589,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.26274511218070984</real>
 				<key>Green Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.21568627655506134</real>
 				<key>Red Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.17647059261798859</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9591,11 +9612,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.89919352531433105</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.89919352531433105</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.89919352531433105</real>
+				<real>0.0</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9608,20 +9629,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.6852307915687561</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.78654336929321289</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.89265114068984985</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
@@ -9642,11 +9663,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.81568628549575806</real>
+				<real>0.87843137979507446</real>
 				<key>Green Component</key>
-				<real>0.81568628549575806</real>
+				<real>0.88235294818878174</real>
 				<key>Red Component</key>
-				<real>0.81568628549575806</real>
+				<real>0.88235294818878174</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10002,20 +10023,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.0</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.30241936445236206</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.30241936445236206</real>
+				<real>0.21568627655506134</real>
 				<key>Red Component</key>
-				<real>0.30241936445236206</real>
+				<real>0.17647059261798859</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10939,7 +10960,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>~/Desktop/repository/SettingFiles/</string>
+	<string>/Users/a13596/Desktop/repository/SettingFiles</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -10957,7 +10978,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-05-17T16:06:54Z</date>
+	<date>2014-06-11T01:11:07Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -11012,6 +11033,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>1.0.0.20140421</string>
+	<string>1.0.0.20140518</string>
 </dict>
 </plist>
