--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -8,10 +8,10 @@
     "jslint_happy": false,
     "brace_style": "collapse",
     "keep_array_indentation": true,
-    "keep_function_indentation": false,
+    "keep_function_indentation": true,
     "space_before_conditional": true,
     "break_chained_methods": false,
-    "eval_code": false,
+    "eval_code": true,
     "unescape_strings": false,
     "wrap_line_length": 0
 }
