--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,11 @@
 	path = vimfiles/.vim/bundle/Vundle.vim
 	url = https://github.com/gmarik/Vundle.vim
 [submodule ".emacs.d/elisp/yasnippet"]
-    path = .emacs.d/elisp/yasnippet
-    url = https://github.com/capitaomorte/yasnippet
+  path = .emacs.d/elisp/yasnippet
+  url = https://github.com/capitaomorte/yasnippet
+[submodule "submodules/auto-fu.zsh"]
+	path = submodules/auto-fu.zsh
+	url = https://github.com/hchbaw/auto-fu.zsh
+[submodule "submodules/zsh-git-prompt"]
+	path = submodules/zsh-git-prompt
+	url = https://github.com/olivierverdier/zsh-git-prompt
